fixed images in porjects/alignment

--- a/css/new.css
+++ b/css/new.css
@@ -18,15 +18,13 @@ header.masthead .intro-text .intro-lead-in{
 }
 ul#confe{
     margin-bottom: 35px;
+    margin-left: 7px;
+    margin-right: 7px;
 }
 a#tele{
   color:black;
 }
-img{
-  margin-left: 7px;
-  margin-right: 7px;
 
-}
 p{
   margin-bottom: 70px;
 }
